--- a/src/components/Content/Description.css
+++ b/src/components/Content/Description.css
@@ -13,7 +13,7 @@
 }
 .Image-container {
   height: 62%;
-  padding-top: 10rem;
+  padding-top: 9%;
   padding-left: 2rem;
 }
 .modal-color-title, .modal-lang-title {
